CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

# INMOTION Depth Camera Lib
SET(PROJECT_NAME inmotion_depth_camera_sdk)

# define project will set CMAKE_CXX_FLAGS to NULL
PROJECT (${PROJECT_NAME})

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/source
    ${PROJECT_SOURCE_DIR}/source/os
    ${PROJECT_SOURCE_DIR}/source/filter
)

SET(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH  ${PROJECT_BINARY_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

LINK_DIRECTORIES(${PROJECT_BINARY_DIR} )

ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(example)




