CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT (depth_frame_grabber)
SET(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
ADD_EXECUTABLE(depth_frame_grabber depth_frame_grabber.cpp)
TARGET_LINK_LIBRARIES(depth_frame_grabber idc)

if (UNIX)
SET(CMAKE_CXX_FLAGS "-Wall -Werror ${CMAKE_CXX_FLAGS}")
TARGET_LINK_LIBRARIES(depth_frame_grabber pthread)
endif()

PROJECT (depth_frame_displayer)
SET(OpenCV_DIR "D:/Programs/opencv/build/install")
find_package(OpenCV REQUIRED)
ADD_EXECUTABLE(depth_frame_displayer depth_frame_displayer.cpp)
TARGET_LINK_LIBRARIES(depth_frame_displayer ${OpenCV_LIBS} idc)

if (UNIX)
SET(CMAKE_CXX_FLAGS "-Wall -Werror ${CMAKE_CXX_FLAGS}")
TARGET_LINK_LIBRARIES(depth_frame_displayer pthread)
endif()

PROJECT (depth_frame_displayer_3d)
find_package(OpenGL REQUIRED)
find_package(glfw3 REQUIRED)
if (UNIX)
find_package(Curses REQUIRED)
INCLUDE_DIRECTORIES(/usr/local/include)
ENDIF()
ADD_EXECUTABLE(depth_frame_displayer_3d depth_frame_displayer_3d.cpp console_controller.cpp)
TARGET_LINK_LIBRARIES(depth_frame_displayer_3d ${OpenCV_LIBS} idc glfw ${OPENGL_gl_LIBRARY} )
IF (UNIX)
TARGET_LINK_LIBRARIES(depth_frame_displayer_3d ${CURSES_LIBRARY})
ENDIF()

if (UNIX)
SET(CMAKE_CXX_FLAGS "-Wall -Werror ${CMAKE_CXX_FLAGS}")
TARGET_LINK_LIBRARIES(depth_frame_displayer_3d pthread)
endif()